--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,7 +4,6 @@
     %meta{:charset => "utf-8"}
     %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}
     %title Made in NY, Exploring Film Permits in NYC
-
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
     = csrf_meta_tags
     / HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries
@@ -13,383 +12,16 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
   %body
     %section#container
-      /
-        **********************************************************************************************************************************************************
-        TOP BAR CONTENT &amp; NOTIFICATIONS
-        ***********************************************************************************************************************************************************
-      / header start
-      %header.header.black-bg
-        .sidebar-toggle-box
-          .fa.fa-bars.tooltips{"data-original-title" => "Toggle Navigation", "data-placement" => "right"}
-        / logo start
-        %a.logo{:href => "index.html"}
-          %b DASHGUM
-        / logo end
-        #top_menu.nav.notify-row
-          / notification start
-          %ul.nav.top-menu
-            / settings start
-            %li.dropdown
-              %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "index.html#"}
-                %i.fa.fa-tasks
-                %span.badge.bg-theme 4
-              %ul.dropdown-menu.extended.tasks-bar
-              .notify-arrow.notify-arrow-green
-            %li
-              %p.green You have 4 pending tasks
-            %li
-              %a{:href => "index.html#"}
-              .task-info
-                .desc DashGum Admin Panel
-                .percent 40%
-              .progress.progress-striped
-                .progress-bar.progress-bar-success{"aria-valuemax" => "100", "aria-valuemin" => "0", "aria-valuenow" => "40", :role => "progressbar", :style => "width: 40%"}
-                  %span.sr-only 40% Complete (success)
-            %li
-              %a{:href => "index.html#"}
-              .task-info
-                .desc Database Update
-                .percent 60%
-              .progress.progress-striped
-                .progress-bar.progress-bar-warning{"aria-valuemax" => "100", "aria-valuemin" => "0", "aria-valuenow" => "60", :role => "progressbar", :style => "width: 60%"}
-                  %span.sr-only 60% Complete (warning)
-            %li
-              %a{:href => "index.html#"}
-              .task-info
-                .desc Product Development
-                .percent 80%
-              .progress.progress-striped
-                .progress-bar.progress-bar-info{"aria-valuemax" => "100", "aria-valuemin" => "0", "aria-valuenow" => "80", :role => "progressbar", :style => "width: 80%"}
-                  %span.sr-only 80% Complete
-            %li
-              %a{:href => "index.html#"}
-              .task-info
-                .desc Payments Sent
-                .percent 70%
-              .progress.progress-striped
-                .progress-bar.progress-bar-danger{"aria-valuemax" => "100", "aria-valuemin" => "0", "aria-valuenow" => "70", :role => "progressbar", :style => "width: 70%"}
-                  %span.sr-only 70% Complete (Important)
-            %li.external
-              %a{:href => "#"} See All Tasks
-          / settings end
-          / inbox dropdown start
-        %li#header_inbox_bar.dropdown
-          %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "index.html#"}
-            %i.fa.fa-envelope-o
-            %span.badge.bg-theme 5
-          %ul.dropdown-menu.extended.inbox
-          .notify-arrow.notify-arrow-green
-        %li
-          %p.green You have 5 new messages
-        %li
-          %a{:href => "index.html#"}
-            %span.photo
-              %img{:alt => "avatar", :src => "assets/img/ui-zac.jpg"}/
-            %span.subject
-              %span.from Zac Snider
-              %span.time Just now
-            %span.message
-              Hi mate, how is everything?
-        %li
-          %a{:href => "index.html#"}
-            %span.photo
-              %img{:alt => "avatar", :src => "assets/img/ui-divya.jpg"}/
-            %span.subject
-              %span.from Divya Manian
-              %span.time 40 mins.
-            %span.message
-              Hi, I need your help with this.
-        %li
-          %a{:href => "index.html#"}
-            %span.photo
-              %img{:alt => "avatar", :src => "assets/img/ui-danro.jpg"}/
-            %span.subject
-              %span.from Dan Rogers
-              %span.time 2 hrs.
-            %span.message
-              Love your new Dashboard.
-        %li
-          %a{:href => "index.html#"}
-            %span.photo
-              %img{:alt => "avatar", :src => "assets/img/ui-sherman.jpg"}/
-            %span.subject
-              %span.from Dj Sherman
-              %span.time 4 hrs.
-            %span.message
-              Please, answer asap.
-        %li
-          %a{:href => "index.html#"} See all messages
-        / inbox dropdown end
-        / notification end
-        .top-menu
-          %ul.nav.pull-right.top-menu
-            %li
-              %a.logout{:href => "login.html"} Logout
-      / header end
-      /
-        **********************************************************************************************************************************************************
-        MAIN SIDEBAR MENU
-        ***********************************************************************************************************************************************************
-      / sidebar start
-      %aside
-        #sidebar.nav-collapse
-          / sidebar menu start
-          %ul#nav-accordion.sidebar-menu
-          %p.centered
-            %a{:href => "profile.html"}
-              %img.img-circle{:src => "assets/img/ui-sam.jpg", :width => "60"}/
-          %h5.centered Marcel Newman
-        %li.mt
-          %a{:href => "index.html"}
-            %i.fa.fa-dashboard
-            %span Dashboard
-        %li.sub-menu
-          %a.active{:href => "javascript:;"}
-            %i.fa.fa-desktop
-            %span UI Elements
-          %ul.sub
-            %li.active
-              %a{:href => "general.html"} General
-            %li
-              %a{:href => "buttons.html"} Buttons
-            %li
-              %a{:href => "panels.html"} Panels
-            %li
-              %a{:href => "google_maps.html"} Google Maps
-        %li.sub-menu
-          %a{:href => "javascript:;"}
-            %i.fa.fa-cogs
-            %span Components
-          %ul.sub
-            %li
-              %a{:href => "calendar.html"} Calendar
-            %li
-              %a{:href => "gallery.html"} Gallery
-            %li
-              %a{:href => "todo_list.html"} Todo List
-            %li
-              %a{:href => "dropzone.html"} Dropzone File Upload
-            %li
-              %a{:href => "inline_editor.html"} Inline Editor
-            %li
-              %a{:href => "file_upload.html"} Multiple File Upload
-        %li.sub-menu
-          %a{:href => "javascript:;"}
-            %i.fa.fa-book
-            %span Extra Pages
-          %ul.sub
-            %li
-              %a{:href => "blank.html"} Blank Page
-            %li
-              %a{:href => "login.html"} Login
-            %li
-              %a{:href => "lock_screen.html"} Lock Screen
-            %li
-              %a{:href => "profile.html"} Profile
-            %li
-              %a{:href => "invoice.html"} Invoice
-            %li
-              %a{:href => "pricing_table.html"} Pricing Table
-            %li
-              %a{:href => "faq.html"} FAQ
-        %li.sub-menu
-          %a{:href => "javascript:;"}
-            %i.fa.fa-tasks
-            %span Forms
-          %ul.sub
-            %li
-              %a{:href => "form_component.html"} Form Components
-            %li
-              %a{:href => "advanced_form_components.html"} Advanced Components
-            %li
-              %a{:href => "form_validation.html"} Form Validation
-        %li.sub-menu
-          %a{:href => "javascript:;"}
-            %i.fa.fa-th
-            %span Data Tables
-          %ul.sub
-            %li
-              %a{:href => "basic_table.html"} Basic Table
-            %li
-              %a{:href => "responsive_table.html"} Responsive Table
-            %li
-              %a{:href => "advanced_table.html"} Advanced Table
-        %li
-          %a{:href => "inbox.html"}
-            %i.fa.fa-envelope
-            %span Mail
-            %span.label.label-theme.pull-right.mail-info 2
-        %li.sub-menu
-          %a{:href => "javascript:;"}
-            %i.fa.fa-bar-chart-o
-            %span Charts
-          %ul.sub
-            %li
-              %a{:href => "morris.html"} Morris
-            %li
-              %a{:href => "chartjs.html"} Chartjs
-            %li
-              %a{:href => "flot_chart.html"} Flot Charts
-            %li
-              %a{:href => "xchart.html"} xChart
-        %li.sub-menu
-          %a{:href => "javascript:;"}
-            %i.fa.fa-comments-o
-            %span Chat Room
-          %ul.sub
-            %li
-              %a{:href => "lobby.html"} Lobby
-            %li
-              %a{:href => "chat_room.html"} Chat Room
-        / sidebar menu end
-      / sidebar end
-      /
-        **********************************************************************************************************************************************************
-        MAIN CONTENT
-        ***********************************************************************************************************************************************************
-      / main content start
+      = render partial: 'top_header'
+      = render partial: 'sidebar'
       %section#main-content
-        %section.wrapper>
-          .row.mt
-            .col-lg-6.col-md-6.col-sm-12>
-              = yield
-              <! -- BASIC PROGRESS BARS -->
-              .showback
-                %h4
-                  %i.fa.fa-angle-right
-                  Basic Progress Bars
-                .progress
-                  .progress-bar.progress-bar-success{"aria-valuemax" => "100", "aria-valuemin" => "0", "aria-valuenow" => "40", :role => "progressbar", :style => "width: 40%"}
-                    %span.sr-only 40% Complete (success)
-                .progress
-                  .progress-bar.progress-bar-info{"aria-valuemax" => "100", "aria-valuemin" => "0", "aria-valuenow" => "20", :role => "progressbar", :style => "width: 20%"}
-                    %span.sr-only 20% Complete
-                .progress
-                  .progress-bar.progress-bar-warning{"aria-valuemax" => "100", "aria-valuemin" => "0", "aria-valuenow" => "60", :role => "progressbar", :style => "width: 60%"}
-                    %span.sr-only 60% Complete (warning)
-                .progress
-                  .progress-bar.progress-bar-danger{"aria-valuemax" => "100", "aria-valuemin" => "0", "aria-valuenow" => "80", :role => "progressbar", :style => "width: 80%"}
-                    %span.sr-only 80% Complete
-              / /showback
-              <! -- STRIPPED PROGRESS BARS -->
-              .showback
-                %h4
-                  %i.fa.fa-angle-right
-                  Stripped Progress Bars
-                .progress.progress-striped
-                  .progress-bar.progress-bar-success{"aria-valuemax" => "100", "aria-valuemin" => "0", "aria-valuenow" => "40", :role => "progressbar", :style => "width: 40%"}
-                    %span.sr-only 40% Complete (success)
-                .progress.progress-striped
-                  .progress-bar.progress-bar-info{"aria-valuemax" => "100", "aria-valuemin" => "0", "aria-valuenow" => "20", :role => "progressbar", :style => "width: 20%"}
-                    %span.sr-only 20% Complete
-                .progress.progress-striped
-                  .progress-bar.progress-bar-warning{"aria-valuemax" => "100", "aria-valuemin" => "0", "aria-valuenow" => "60", :role => "progressbar", :style => "width: 60%"}
-                    %span.sr-only 60% Complete (warning)
-                .progress.progress-striped
-                  .progress-bar.progress-bar-danger{"aria-valuemax" => "100", "aria-valuemin" => "0", "aria-valuenow" => "80", :role => "progressbar", :style => "width: 80%"}
-                    %span.sr-only 80% Complete (danger)
-              / /showback
-              <! -- ANIMATED PROGRESS BARS -->
-              .showback
-                %h4
-                  %i.fa.fa-angle-right
-                  Animated Progress Bars
-                .progress.progress-striped.active
-                  .progress-bar{"aria-valuemax" => "100", "aria-valuemin" => "0", "aria-valuenow" => "45", :role => "progressbar", :style => "width: 45%"}
-                    %span.sr-only 45% Complete
-              / /showback
-              <! -- MODALS -->
-              .showback
-                %h4
-                  %i.fa.fa-angle-right
-                  Modal Example
-                / Button trigger modal
-                %button.btn.btn-success.btn-lg{"data-target" => "#myModal", "data-toggle" => "modal"}
-                  Launch Modal
-                / Modal
-                #myModal.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "myModalLabel", :role => "dialog", :tabindex => "-1"}
-                  .modal-dialog
-                    .modal-content
-                      .modal-header
-                        %button.close{"aria-hidden" => "true", "data-dismiss" => "modal", :type => "button"} &times;
-                        %h4#myModalLabel.modal-title Modal title
-                      .modal-body
-                        Hi there, I am a Modal Example for Dashgum Admin Panel.
-                      .modal-footer
-                        %button.btn.btn-default{"data-dismiss" => "modal", :type => "button"} Close
-                        %button.btn.btn-primary{:type => "button"} Save changes
-            <! --/col-lg-6 -->
-            .col-lg-6.col-md-6.col-sm-12
-              <! -- ALERTS EXAMPLES -->
-              .showback
-                %h4
-                  %i.fa.fa-angle-right
-                  Alerts Examples
-                .alert.alert-success
-                  %b Well done!
-                  You successfully read this important alert message.
-                .alert.alert-info
-                  %b Heads up!
-                  This alert needs your attention, but it's not super important.
-                .alert.alert-warning
-                  %b Warning!
-                  Better check yourself, you're not looking too good.
-                .alert.alert-danger
-                  %b Oh snap!
-                  Change a few things up and try submitting again.
-              / /showback
-              <! -- DISMISSABLE ALERT -->
-              .showback
-                %h4
-                  %i.fa.fa-angle-right
-                  Dismissable Alert
-                .alert.alert-warning.alert-dismissable
-                  %button.close{"aria-hidden" => "true", "data-dismiss" => "alert", :type => "button"} &times;
-                  %strong Warning!
-                  Better check yourself, you're not looking too good.
-              / /showback
-              <! -- BADGES -->
-              .showback
-                %h4
-                  %i.fa.fa-angle-right
-                  Badges
-                %span.badge 5
-                %span.badge.bg-primary 10
-                %span.badge.bg-success 15
-                %span.badge.bg-info 20
-                %span.badge.bg-inverse 25
-                %span.badge.bg-warning 30
-                %span.badge.bg-important 35
-              / /showback
-              <! -- LABELS -->
-              .showback
-                %h4
-                  %i.fa.fa-angle-right
-                  Labels
-                %span.label.label-default label
-                %span.label.label-primary Primary
-                %span.label.label-success Success
-                %span.label.label-info Info
-                %span.label.label-warning Warning
-                %span.label.label-danger Danger
-              / /showback
-            / /col-lg-6
-          / / row
-        <! --/wrapper -->
-      / /MAIN CONTENT
-      / main content end
-      / footer start
-      %footer.site-footer
-        .text-center
-          2014 - Alvarez.is
-          %a.go-top{:href => "general.html#"}
-            %i.fa.fa-angle-up
-      / footer end
-
+        %section.wrapper
+          = yield
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     :javascript
       //custom select box
 
-      //$(function(){
-      //  $('select.styled').customSelect();
-      //});
+      $(function(){
+        $('select.styled').customSelect();
+      });
+
