more basic views... just to establish ability to see what's going on

--- a/app/views/application/_sidebar.haml
+++ b/app/views/application/_sidebar.haml
@@ -5,9 +5,15 @@
         %a{:href => "index.html"}
           %i.fa.fa-dashboard
           %span Dashboard
+
       %li
-        %a{:href => "index.html"}
-          %i.fa.fa-cogs
-          %span Dashboard
+        %a{:href => data_companies_path}
+          %i.fa.fa-building
+          %span Companies
+
+      %li
+        %a{:href => data_projects_path}
+          %i.fa.fa-tasks
+          %span Projects
 
 
