--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,6 +18,8 @@
         %section.wrapper
           = yield
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
+    = javascript_include_tag "http://maps.googleapis.com/maps/api/js?sensor=false&libraries=geometry&key=AIzaSyDtHALS1P02i_Temq6eIkXfIvgxgT7Dx24"
+
     :javascript
       //custom select box
 
@@ -25,3 +27,4 @@
         $('select.styled').customSelect();
       });
 
+    = yield :footer_js
