More wip, counter caches, api controller stubs

--- a/app/views/data/projects/index.html.haml
+++ b/app/views/data/projects/index.html.haml
@@ -32,7 +32,7 @@
             %tr
               %td.numeric= project.city_ref
               %td= project.category.name
-              %td= project.permits.count
+              %td= project.permits_count
               %td= project.company.name
               %td= link_to project.title, data_company_project_permits_path(company_id: project.company_id, project_id: project.id)
 
