--- a/app/views/data/permits/index.html.haml
+++ b/app/views/data/permits/index.html.haml
@@ -3,7 +3,7 @@
     .showback
       %h4
         %i.fa.fa-angle-right
-        == #{@permits.count} Permits for #{@project.title}
+        == #{@permits.total_count} Permits for #{@project.title}
 
       #map-canvas
 
@@ -23,18 +23,18 @@
             %th Duration
         %tbody
           - @permits.each do |permit|
+            - hoods = permit.locations.with_address.pluck(:neighborhood).uniq.compact.join(", ")
             %tr
               %td.numeric= permit.event_ref
               %td= permit.event_type
               %td== #{permit.locations.count} + #{permit.intersections.count}
-              %td== #{permit.locations.map { |loc| loc.address.neighborhood }.uniq.compact.join(", ")}, <strong>#{permit.boro}</strong>
+              %td== #{hoods}, <strong>#{permit.boro}</strong>
               %td= permit.event_name
               %td= permit.event_start.in_time_zone("EST").strftime('%b %d, %Y at %H:%m %p')
               %td= permit.event_end.in_time_zone("EST").strftime('%b %d, %Y at %H:%m %p')
               %td= shoot_length(permit.event_start, permit.event_end)
 
               -#%td= link_to permit.title, data_company_permit_permits_path(company_id: permit.company_id, permit_id: permit.id)
-
       = paginate @permits
 
 
