Switch to asseturl for css

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,7 +14,7 @@ $navbar-default-border: 0px;
 @import 'font-awesome';
 
 
-@import './material-design.css';
+@import url('./material-design.css');
 
 
 // gmap
